--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,11 +17,76 @@ body {
 }
 
 header {
-  padding: 1em;
+  padding: 1.5em;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   #theme-selector {
     display: flex;
+    align-items: center;
+
+    width: 50%;
+
+    h3 {
+      text-transform: uppercase;
+      letter-spacing: 0.1rem;
+      font-size: 1rem;
+    }
+
+    .theme-switcher {
+      position: relative;
+
+      width: 100%;
+      margin-left: 1em;
+      &__labels {
+        display: flex;
+        justify-content: space-around;
+        label {
+          &:hover {
+            cursor: pointer;
+          }
+        }
+      }
+      &__btns {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        background-color: white;
+        width: 100%;
+        height: 2em;
+        border-radius: 1em;
+        padding: 0.5rem;
+        input {
+          opacity: 0;
+          z-index: 1;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        #dark:checked ~ #active-btn {
+          left: 10%;
+        }
+
+        #light:checked ~ #active-btn {
+          left: 40%;
+        }
+        #purple:checked ~ #active-btn {
+          left: 70%;
+        }
+        #active-btn {
+          position: absolute;
+          top: 5px;
+          width: 1.5em;
+          height: 1.5em;
+
+          border-radius: 50%;
+          opacity: 1;
+          transition: left 0.5s ease-in;
+        }
+      }
+    }
   }
 }
 
@@ -64,6 +129,7 @@ main {
         cursor: pointer;
         filter: brightness(1.5);
       }
+
       &:nth-last-child(2) {
         grid-column: 1/3;
       }
@@ -78,16 +144,17 @@ main {
   }
 }
 
-
 //THEME INTEGRATIONO
 @include themify($themes) {
   background-color: themed("mainBG");
   header {
-    h1 {
-      color: themed("mainText");
-    }
-
-    #theme-selctor {
+    color: themed("mainText");
+    .theme-switcher {
+      &__btns {
+        input:checked ~ #active-btn {
+          background-color: themed("specialKey1");
+        }
+      }
     }
   }
 
@@ -102,17 +169,30 @@ main {
         color: themed("textDark");
         background-color: themed("keyBG");
         border-bottom: 4px solid themed("keyShadow");
+
+        &:active {
+          transform: translateY(5px);
+          border-bottom: 2px solid themed("keyShadow");
+        }
       }
       #equal {
         background-color: themed("specialKey1");
         color: themed("textLight");
         border-bottom: 4px solid themed("specialKey1Shadow");
+        &:active{
+          border-bottom: 2px solid themed("specialKey1Shadow");
+        }
+        
       }
       #reset,
       #delete {
         background-color: themed("specialKey2");
         color: themed("textLight");
         border-bottom: 4px solid themed("specialKey2Shadow");
+
+        &:active{
+          border-bottom: 2px solid themed("specialKey2Shadow");
+        }
       }
     }
   }
@@ -122,6 +202,14 @@ main {
     justify-content: center;
     align-items: center;
   }
+  header {
+    min-width: 40em;
+
+    #theme-selector {
+      max-width: 25%;
+    }
+  }
+
   main {
     flex-grow: 0;
     min-width: 40em;
