--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,7 +52,7 @@ header {
         display: flex;
         justify-content: space-between;
         position: relative;
-        background-color: white;
+        
         width: 100%;
         height: 2em;
         border-radius: 1em;
@@ -151,6 +151,7 @@ main {
     color: themed("mainText");
     .theme-switcher {
       &__btns {
+        background-color: themed("keypadBG");
         input:checked ~ #active-btn {
           background-color: themed("specialKey1");
         }
